# convaix-app

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SELF_HOSTING.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
plan/: README.md  architecture.md  codebase-audit.md  milestone-0-setup.md  milestone-1-providers.md  milestone-2-pg-backend.md  milestone-3-webapp.md  milestone-4-rag.md  milestone-5-packaging.md  open-questions.md  roadmap.md
src/convaix/: __init__.py  chunking.py  cli.py  schema.py  validate.py
src/convaix/db/: __init__.py  base.py  pg_store.py  sqlite_store.py
src/convaix/embeddings/: __init__.py  base.py  mlx_nomic.py  sentence_tf.py
src/convaix/providers/: __init__.py  base.py  chatgpt.py  claude.py  gemini.py
src/convaix/rag/: __init__.py  engine.py  ollama.py
src/convaix/web/: __init__.py  api.py  htmx.py
tests/: conftest.py  test_cli_import.py  test_db.py  test_providers.py  test_rag.py  test_schema.py  test_validate.py  test_web.py
tests/fixtures/: chatgpt_sample.json  claude_sample.json  gemini_sample.json
